# ai-health-assistant

./: .gitignore  Dockerfile-testing  Makefile  README.md  backend.py  docker-compose.yml  make_migration.py  pyproject.toml  setup.cfg
app/: .env.local  app.py  settings.py
app/adapters/: exceptions.py
app/adapters/ai_adapter/: adapter_manager.py  base.py  interface.py  schemas.py
app/adapters/ai_adapter/openai/: adapter.py
app/api/: __init__.py
app/api/chats/: handlers.py  schemas.py
app/api/errors/: api_error.py  handlers.py
app/api/srv/: handlers.py
app/dependencies/: web_app.py
app/domain/: chat.py  exception.py
app/dto/: chat.py
app/enums/: chats.py
app/infrastructure/: db.py  logging.py
app/infrastructure/http_clients/: base.py  enums.py  exceptions.py
app/infrastructure/http_clients/openai/: client.py  schemas.py
app/infrastructure/middlewares/: logging_middleware.py
app/persistent/db_schemas/: __init__.py  base.py  chat.py
app/repositories/: chat.py  disease.py  exception.py  exercise.py  factor.py  message.py  place.py  plan.py  uow.py  user_goal.py
app/use_cases/chat/: add_chat.py  add_message.py  add_plan_disease.py  add_plan_exercise.py  add_plan_factor.py  add_plan_goal.py  add_plan_place.py  delete_chat.py  generate_plan.py  set_plan_exercise_type.py  update_plan.py
app/utils/: datetime.py  model.py  retry.py
app/views/chats/: get_chats.py  get_exercises.py  get_factors.py  get_places.py  get_plan_info.py  get_user_goals.py
migrations/: changelog.xml  liquibase.properties
migrations/sql/: description.sql  exercise_place.sql  exercise_type.sql  init.sql
